--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend-Jibi
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/jibi
-spring.datasource.username=root
+spring.datasource.password=AVNS_HcOaajana6coPcxzTdj
+spring.datasource.url=mysql://avnadmin:AVNS_HcOaajana6coPcxzTdj@mysql-2a464ece-tjibi2966-b423.k.aivencloud.com:11974/defaultdb?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tarikbelaid12334@gmail.com
